--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,132 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    background: #f2f3f4;
+    font-family: sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #3287ae;
+}
+
+img {
+    max-width: 100%;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.container {
+    background: #FFF;
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 30px;
+    border-radius: 4px;
+}
+
+.site-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.alert {
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.alert-notice {
+    background: #c5dde4;
+}
+
+.alert-error {
+    background: #e7ded1;
+}
+
+.navigation-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.navigation-menu li {
+    display: inline-block;
+}
+
+.navigation-menu li a {
+    padding: 10px 30px;
+    background: #f1eeea;
+    border-radius: 4px;
+}
+
+.navigation-menu li a:hover {
+    opacity: .7;
+    text-decoration: none;
+}
+
+#counter-image {
+    max-width: 100%;
+    max-height: 300px;
+}
+
+table {
+    width: 100%;
+    text-align: center;
+}
+
+table th {
+    background: #f1ece7;
+    padding: 5px;
+}
+
+table tr:nth-child(2n) {
+    background: #f2f1f1;
+}
+
+table td {
+    padding: 10px;
+}
+
+table img {
+    width: 200px;
+}
+
+#play-game {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 300px;
+}
+
+#play-game h1, #play-game .play-image-container {
+    flex: 1
+}
+
+#play-game h1 {
+    font-size: 100px;
+}
+
+button, input[type=submit] {
+    background: #3287ae;
+    color: #FFF;
+    border-radius: 10px;
+    padding: 8px 15px;
+    font-size: 16px;
+}
+
+#save-play-button {
+    width: 100%;
+    padding: 20px;
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.upload-field {
+    margin-bottom: 10px;
+}
