--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,39 +1,11 @@
 <h2>Uploads</h2>
 
-<%= form_for @upload do |f| %>
-  <div class="upload-field">
-    <%= f.file_field :file, multiple: true, required: true %>
-  </div>
-
-  <%= f.submit("Upload!") %>
-<% end %>
+<%= render "form", upload: @upload %>
 
 <h3>Current uploads</h3>
 
 <% if @uploads.empty? %>
   <p>There are no uploads yet.</p>
+<% else %>
+  <%= render "list", uploads: @uploads %>
 <% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Image</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @uploads.each do |upload| %>
-      <tr>
-        <td><%= upload.id %></td>
-        <td><%= image_tag(upload.file.attachment) %></td>
-        <td>
-          <ul>
-            <li><%= link_to("Delete", upload, method: :delete, data: { confirm: "Are you sure?" }) %></li>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
